// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitApi golden output > default (plain fetch) 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { router } from '@inertiajs/react';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; filterFields: never };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; filterFields: never };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; filterFields: never };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; filterFields: never };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; filterFields: never };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; filterFields: "status" | "name" };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; filterFields: "total" | "state" };
  };
};

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body: input?.body }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
}

export type NavigateOptions = {
  method?: string;
  data?: Record<string, unknown>;
  preserveState?: boolean;
  preserveScroll?: boolean;
  replace?: boolean;
};

/**
 * Type-safe navigation using Inertia router.
 * Resolves the URL from the named route and calls \`router.visit()\`.
 */
export function navigate<K extends RouteName>(
  name: K,
  ...args: ExtractParams<(typeof ROUTES)[K]> extends never
    ? [options?: NavigateOptions]
    : [options: { params: RouteParams<K> } & NavigateOptions]
): void {
  const [options] = args as [({ params?: Record<string, string> } & NavigateOptions) | undefined];
  const url = route(name as never, (options as any)?.params as never);
  const { params: _p, ...visitOptions } = options ?? {} as any;
  router.visit(url, visitOptions);
}
"
`;

exports[`emitApi golden output > empty routes 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { router } from '@inertiajs/react';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = Record<string, never>;

export function createApi(_fetcher: Fetcher): Record<string, never> {
  return {};
}
export type Api = ReturnType<typeof createApi>;

export namespace Route {
  export type Response<K extends string> = never;
  export type Body<K extends string> = never;
  export type Query<K extends string> = never;
  export type Params<K extends string> = never;
  export type Error<K extends string> = never;
  export type FilterFields<K extends string> = never;
  export type Request<K extends string> = { body: never; query: never; params: never };
}

export namespace Path {
  export type Response<M extends string, U extends string> = never;
  export type Body<M extends string, U extends string> = never;
  export type Query<M extends string, U extends string> = never;
  export type Params<M extends string, U extends string> = never;
  export type Error<M extends string, U extends string> = never;
  export type FilterFields<M extends string, U extends string> = never;
}

export type NavigateOptions = {
  method?: string;
  data?: Record<string, unknown>;
  preserveState?: boolean;
  preserveScroll?: boolean;
  replace?: boolean;
};

export function navigate(_name: never, _options?: NavigateOptions): void {
  // No routes available
}
"
`;

exports[`emitApi golden output > mutationClient: inertia 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { router } from '@inertiajs/react';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; filterFields: never };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; filterFields: never };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; filterFields: never };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; filterFields: never };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; filterFields: never };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; filterFields: "status" | "name" };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; filterFields: "total" | "state" };
  };
};

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body: input?.body }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
}

export type NavigateOptions = {
  method?: string;
  data?: Record<string, unknown>;
  preserveState?: boolean;
  preserveScroll?: boolean;
  replace?: boolean;
};

/**
 * Type-safe navigation using Inertia router.
 * Resolves the URL from the named route and calls \`router.visit()\`.
 */
export function navigate<K extends RouteName>(
  name: K,
  ...args: ExtractParams<(typeof ROUTES)[K]> extends never
    ? [options?: NavigateOptions]
    : [options: { params: RouteParams<K> } & NavigateOptions]
): void {
  const [options] = args as [({ params?: Record<string, string> } & NavigateOptions) | undefined];
  const url = route(name as never, (options as any)?.params as never);
  const { params: _p, ...visitOptions } = options ?? {} as any;
  router.visit(url, visitOptions);
}
"
`;

exports[`emitApi golden output > query + inertia + custom queryImport 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { queryOptions as _queryOptions, mutationOptions as _mutationOptions } from '@tanstack/vue-query';
import { filterQueryTyped as _filterQueryTyped } from '@dudousxd/nestjs-filter-client';
import { router } from '@inertiajs/react';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; filterFields: never };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; filterFields: never };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; filterFields: never };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; filterFields: never };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; filterFields: never };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; filterFields: "status" | "name" };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; filterFields: "total" | "state" };
  };
};

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["users.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.list", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }) }),
      }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["users.show", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.show", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }) }),
      }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => ({
        fetch: () => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }),
        queryKey: () => ["users.create", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["users"]["create"]['body']) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body }) }),
      }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => ({
        fetch: () => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }),
        queryKey: () => ["users.update", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["users"]["update"]['body']) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body }) }),
      }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => ({
          fetch: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }),
          queryKey: () => ["admin.reports.list", input] as const,
          queryOptions: () => _queryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }) }),
        }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => ({
        fetch: () => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body: input?.body }),
        queryKey: () => ["pipelineRuns.search", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["pipelineRuns"]["search"]['body']) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body }) }),
        filterQuery: () => _filterQueryTyped<"status" | "name">(),
      }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["orders.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["orders.list", input] as const, queryFn: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }) }),
        filterQuery: () => _filterQueryTyped<"total" | "state">(),
      }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
}

export type NavigateOptions = {
  method?: string;
  data?: Record<string, unknown>;
  preserveState?: boolean;
  preserveScroll?: boolean;
  replace?: boolean;
};

/**
 * Type-safe navigation using Inertia router.
 * Resolves the URL from the named route and calls \`router.visit()\`.
 */
export function navigate<K extends RouteName>(
  name: K,
  ...args: ExtractParams<(typeof ROUTES)[K]> extends never
    ? [options?: NavigateOptions]
    : [options: { params: RouteParams<K> } & NavigateOptions]
): void {
  const [options] = args as [({ params?: Record<string, string> } & NavigateOptions) | undefined];
  const url = route(name as never, (options as any)?.params as never);
  const { params: _p, ...visitOptions } = options ?? {} as any;
  router.visit(url, visitOptions);
}
"
`;

exports[`emitApi golden output > query: true (TanStack handles) 1`] = `
"// Generated by @dudousxd/nestjs-codegen. Do not edit.

import { queryOptions as _queryOptions, mutationOptions as _mutationOptions } from '@tanstack/react-query';
import { filterQueryTyped as _filterQueryTyped } from '@dudousxd/nestjs-filter-client';
import { router } from '@inertiajs/react';
import { route, ROUTES, type RouteName, type ExtractParams, type RouteParams } from './routes.js';
import type { Fetcher } from '@dudousxd/nestjs-client';

export type ApiRouter = {
  users: {
    list: { method: "GET"; url: "/api/users"; params: never; query: { active?: boolean }; body: never; response: User[]; filterFields: never };
    show: { method: "GET"; url: "/api/users/:id"; params: { id: string }; query: never; body: never; response: User; filterFields: never };
    create: { method: "POST"; url: "/api/users"; params: never; query: never; body: { name: string }; response: User; filterFields: never };
    update: { method: "PATCH"; url: "/api/users/:id"; params: { id: string }; query: never; body: { name?: string }; response: User; filterFields: never };
  };
  admin: {
    reports: {
      list: { method: "GET"; url: "/api/admin/reports"; params: never; query: never; body: never; response: Report[]; filterFields: never };
    };
  };
  pipelineRuns: {
    search: { method: "POST"; url: "/api/pipeline-runs/search"; params: never; query: never; body: never; response: { data: Run[] }; filterFields: "status" | "name" };
  };
  orders: {
    list: { method: "GET"; url: "/api/orders"; params: never; query: import('@dudousxd/nestjs-filter-client').TypedFilterQuery<"total" | "state">; body: never; response: Order[]; filterFields: "total" | "state" };
  };
};

export function createApi(fetcher: Fetcher) {
  return {
    users: {
      list: (input?: { query?: ApiRouter["users"]["list"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["users.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.list", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["list"]['response']>(route("users.list" as never) || "/api/users", { query: input?.query as Record<string, unknown> | undefined }) }),
      }),
      show: (input?: { params: ApiRouter["users"]["show"]['params']; query?: ApiRouter["users"]["show"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["users.show", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["users.show", input] as const, queryFn: () => fetcher.get<ApiRouter["users"]["show"]['response']>(route("users.show" as never, input?.params as never) || "/api/users/:id", { query: input?.query as Record<string, unknown> | undefined }) }),
      }),
      create: (input?: { body?: ApiRouter["users"]["create"]['body'] }) => ({
        fetch: () => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body: input?.body }),
        queryKey: () => ["users.create", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["users"]["create"]['body']) => fetcher.post<ApiRouter["users"]["create"]['response']>(route("users.create" as never) || "/api/users", { body }) }),
      }),
      update: (input?: { params: ApiRouter["users"]["update"]['params']; body?: ApiRouter["users"]["update"]['body'] }) => ({
        fetch: () => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body: input?.body }),
        queryKey: () => ["users.update", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["users"]["update"]['body']) => fetcher.patch<ApiRouter["users"]["update"]['response']>(route("users.update" as never, input?.params as never) || "/api/users/:id", { body }) }),
      }),
    },
    admin: {
      reports: {
        list: (input?: { query?: ApiRouter["admin"]["reports"]["list"]['query'] }) => ({
          fetch: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }),
          queryKey: () => ["admin.reports.list", input] as const,
          queryOptions: () => _queryOptions({ queryKey: ["admin.reports.list", input] as const, queryFn: () => fetcher.get<ApiRouter["admin"]["reports"]["list"]['response']>(route("admin.reports.list" as never) || "/api/admin/reports", { query: input?.query as Record<string, unknown> | undefined }) }),
        }),
      },
    },
    pipelineRuns: {
      search: (input?: Record<string, never>) => ({
        fetch: () => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body: input?.body }),
        queryKey: () => ["pipelineRuns.search", input] as const,
        mutationOptions: () => _mutationOptions({ mutationFn: (body: ApiRouter["pipelineRuns"]["search"]['body']) => fetcher.post<ApiRouter["pipelineRuns"]["search"]['response']>(route("pipelineRuns.search" as never) || "/api/pipeline-runs/search", { body }) }),
        filterQuery: () => _filterQueryTyped<"status" | "name">(),
      }),
    },
    orders: {
      list: (input?: { query?: ApiRouter["orders"]["list"]['query'] }) => ({
        fetch: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }),
        queryKey: () => ["orders.list", input] as const,
        queryOptions: () => _queryOptions({ queryKey: ["orders.list", input] as const, queryFn: () => fetcher.get<ApiRouter["orders"]["list"]['response']>(route("orders.list" as never) || "/api/orders", { query: input?.query as Record<string, unknown> | undefined }) }),
        filterQuery: () => _filterQueryTyped<"total" | "state">(),
      }),
    },
  };
}

export type Api = ReturnType<typeof createApi>;

type _RouterAt<R, P extends string> = P extends \`\${infer Head}.\${infer Tail}\`
  ? Head extends keyof R ? _RouterAt<R[Head], Tail> : never
  : P extends keyof R ? R[P] : never;

type ResolveByName<K extends string, Field extends string> = _RouterAt<ApiRouter, K> extends infer R ? Field extends keyof R ? R[Field] : never : never;

type _LeafValues<T> = T extends { method: string; url: string }
  ? T
  : T extends object ? _LeafValues<T[keyof T]> : never;

type ResolveByPath<M extends string, U extends string, Field extends string> = _LeafValues<ApiRouter> extends infer L
  ? L extends { method: M; url: U }
    ? Field extends keyof L ? L[Field] : never
    : never
  : never;

export namespace Route {
  export type Response<K extends string> = ResolveByName<K, "response">;
  export type Body<K extends string> = ResolveByName<K, "body">;
  export type Query<K extends string> = ResolveByName<K, "query">;
  export type Params<K extends string> = ResolveByName<K, "params">;
  export type Error<K extends string> = ResolveByName<K, "error">;
  export type FilterFields<K extends string> = ResolveByName<K, "filterFields">;
  export type Request<K extends string> = {
    body: Body<K>;
    query: Query<K>;
    params: Params<K>;
  };
}

export namespace Path {
  export type Response<M extends string, U extends string> = ResolveByPath<M, U, "response">;
  export type Body<M extends string, U extends string> = ResolveByPath<M, U, "body">;
  export type Query<M extends string, U extends string> = ResolveByPath<M, U, "query">;
  export type Params<M extends string, U extends string> = ResolveByPath<M, U, "params">;
  export type Error<M extends string, U extends string> = ResolveByPath<M, U, "error">;
  export type FilterFields<M extends string, U extends string> = ResolveByPath<M, U, "filterFields">;
}

export type NavigateOptions = {
  method?: string;
  data?: Record<string, unknown>;
  preserveState?: boolean;
  preserveScroll?: boolean;
  replace?: boolean;
};

/**
 * Type-safe navigation using Inertia router.
 * Resolves the URL from the named route and calls \`router.visit()\`.
 */
export function navigate<K extends RouteName>(
  name: K,
  ...args: ExtractParams<(typeof ROUTES)[K]> extends never
    ? [options?: NavigateOptions]
    : [options: { params: RouteParams<K> } & NavigateOptions]
): void {
  const [options] = args as [({ params?: Record<string, string> } & NavigateOptions) | undefined];
  const url = route(name as never, (options as any)?.params as never);
  const { params: _p, ...visitOptions } = options ?? {} as any;
  router.visit(url, visitOptions);
}
"
`;
